--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webpack-template",
+  "name": "ff7-limit-tracker",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
